# aws-sidekick

./: .dockerignore  .gitignore  DEV_MODE_CREDENTIALS.md  Dockerfile  Makefile  README.md  api.py  debug_credentials.py  docker-compose.yml  example.env  main.py  mcp-config.yaml  pyproject.toml  quickstart.env  quickstart.md  test_mcp_config.py  test_multi_account.py
.github/workflows/: check.yml
client/: .gitignore  index.html  package.json  pnpm-lock.yaml  tailwind.config.js  tsconfig.json  vite.config.ts
client/src/: App.vue  style.css
client/src/components/: AWSAccountManager.vue  AWSAccountSelector.vue  AWSCredentialsManager.vue  AWSStatus.vue  HealthStatus.vue  LoadingIndicator.vue  MessageInput.vue  MessageList.vue  NotificationContainer.vue  PerformanceMonitor.vue  SkeletonLoader.vue  TaskCard.vue  ThemeToggle.vue  TypingIndicator.vue  VirtualList.vue
client/src/router/: index.ts
client/src/services/: api.ts
client/src/stores/: aws.ts  awsAccounts.ts  chat.ts  tasks.ts  theme.ts
client/src/types/: api.ts
client/src/views/: AwsView.vue  ChatView.vue  TaskDetailView.vue  TasksView.vue
config/: mcp-config.yaml  system-prompt.yaml
src/: __init__.py  main.py
src/adapters/: __init__.py
src/adapters/inbound/: __init__.py  exception_handlers.py  fastapi_api_adapter.py  middleware.py  static_files.py
src/adapters/outbound/: __init__.py  agent_repository_adapter.py  aws_client_adapter.py  mcp_reinitialization_adapter.py  sqlite_aws_account_repository_adapter.py  sqlite_chat_repository_adapter.py  sqlite_task_repository_adapter.py  task_repository_adapter.py
src/application/services/: aws_account_application_service.py  aws_application_service.py  chat_application_service.py  task_application_service.py
src/core/: __init__.py
src/core/domain/: __init__.py  exceptions.py
src/core/domain/entities/: aws_account.py  aws_account_metadata.py  aws_resource.py  chat.py  task.py
src/core/domain/services/: __init__.py  account_context_cache.py  response_processor.py
src/core/domain/value_objects/: aws_credentials.py
src/core/ports/: __init__.py
src/core/ports/inbound/: __init__.py  aws_account_service_port.py  aws_service_port.py  chat_service_port.py  task_service_port.py
src/core/ports/outbound/: __init__.py  agent_repository_port.py  aws_account_repository_port.py  aws_client_port.py  chat_repository_port.py  mcp_reinitialization_port.py  task_repository_port.py
src/core/use_cases/: __init__.py  aws_analysis_use_case.py  execute_task_use_case.py  process_chat_message_use_case.py
src/infrastructure/: chat_migration_helper.py  config.py  credential_manager.py  dependency_injection.py  logging.py  mcp_manager.py  migration_helper.py
